--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,3 +6,12 @@ services:
   App\:
     resource: '../src/*'
     exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
+
+  Pusher\Pusher:
+    arguments:
+      $auth_key: '%env(PUSHER_APP_KEY)%'
+      $secret: '%env(PUSHER_APP_SECRET)%'
+      $app_id: '%env(PUSHER_APP_ID)%'
+      $options:
+        cluster: '%env(PUSHER_APP_CLUSTER)%'
+        useTLS: true
